# PrismAgent

./: .gitignore  Cargo.toml  build.rs  go.mod
cmd/prismagent/: main.go
internal/agent/: interfaces.go
internal/atom/: atom.go  atom_test.go
internal/contextprovider/: local.go
internal/core/: agent.go  atom.go  budget.go  budget_test.go  context_object.go  conversation.go  event.go  id.go  snapshot.go  task.go  task_test.go  workspace.go
internal/filestore/: store.go  store_test.go
internal/kernel/: id.go  kernel.go  kernel_test.go  spawn.go  spawn_test.go  tool_test.go
internal/memory/: runtime.go  runtime_test.go
internal/model/: deepseek.go  deepseek_test.go  mock.go  model.go
internal/store/: interfaces.go
internal/tool/: filesystem.go  filesystem_test.go  tool.go
internal/unit/: assembly.go  assembly_test.go  chain.go  chain_test.go  store.go  store_test.go
src/: actors.rs  bus.rs  error.rs  handles.rs  id.rs  kernel.rs  lib.rs  macros.rs  model.rs  stdlib_assets.rs  store.rs  subsystems.rs  tools.rs  web_assets.rs
src/actors/: agent_actor.rs  config_actor.rs  llm_actor.rs  tools_actor.rs  workflow_actor.rs
src/actors/agent_actor/: model.rs  pipeline.rs  runtime.rs
src/actors/config_actor/: model.rs  runtime.rs
src/actors/context_actor/: model.rs  runtime.rs
src/actors/llm_actor/: adapters.rs  model.rs  runtime.rs
src/actors/profile_actor/: model.rs  runtime.rs
src/actors/shell_actor/: model.rs  runtime.rs
src/actors/storage_actor/: model.rs  runtime.rs
src/actors/tools_actor/: fs.rs  model.rs  prismagent.rs  runtime.rs  shell.rs  web.rs
src/actors/workflow_actor/: dag.rs  model.rs  runtime.rs
src/actors/workspace_actor/: model.rs  runtime.rs
src/kernel/: kernel.rs  pipeline.rs  processor.rs
src/model/: agent.rs  app.rs  asyncioinstance.rs  atom.rs  event.rs  kernel.rs  run.rs  unit.rs  workspace.rs
src/shell/: tui.rs
src/store/: agentstore.rs  appstore.rs  atomstore.rs  runstore.rs  unitstore.rs  workspacestore.rs
src/subsystems/: config.rs  config_subsystem.rs  tools_subsystem.rs
src/subsystems/agent_subsystem/: runtime.rs
src/subsystems/config_subsystem/: model.rs  runtime.rs
src/subsystems/context_subsystem/: model.rs  runtime.rs
src/subsystems/shell_subsystem/: model.rs  runtime.rs
src/subsystems/storage_subsystem/: model.rs  runtime.rs
src/subsystems/tools_subsystem/: fs.rs  runtime.rs  shell.rs  web.rs
src/tools/: fs.rs  registry.rs  shell.rs  web.rs
stdlib/profiles/: coordinator.toml  default.toml  executor.toml  planner.toml  verifier.toml
stdlib/skills/multi-agent-collaboration/: SKILL.md
web/: index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
web/src/: App.test.tsx  App.tsx  main.tsx
web/src/api/: client.test.ts  client.ts  events.test.ts  events.ts  types.ts
web/src/components/: AppShell.tsx  ConfirmDialog.tsx
web/src/state/: approval.ts  (+7 more)
(+34 files in other folders)
