[package]
name = "prismagent"
version = "0.9.0"
edition = "2024"

[[bin]]
name = "prismagent"
path = "src/bin/prismagent.rs"

[dependencies]
serde = { version = "1.0.228", features = ["derive", "rc"] }
anyhow = "1.0.102"
hex = "0.4.3"
sha2 = "0.11.0"
tokio = { version = "1.52.3", features = ["full"] }
uuid = { version = "1.23.1", features = ["v7", "fast-rng"] }
serde_json = "1.0.149"
ratatui = { version = "0.30.0", features = ["scrolling-regions"] }
crossterm = "0.29.0"
toml = "1.1.2"
chrono = "0.4.44"
whoami = "2.1.2"
directories = "6.0.0"
genai = "0.6.0-beta.20"
reqwest = { version = "0.13", features = ["json"] }
urlencoding = "2"
unicode-width = "0.2.2"

[profile.release]
opt-level = 3
lto = "fat"       # 跨 crate 链接时全局优化，性能提升 10-30%
codegen-units = 1 # 禁止并行编译，允许更激进的内联优化
strip = true      # 去除符号表，减小体积
panic = "abort"   # 减小体积并略微提升性能
