[package]
name = "prismagent"
version = "0.9.0"
edition = "2024"

[[bin]]
name = "prismagentd"            # PrismaAgent Daemon
path = "src/bin/prismagentd.rs"

[dependencies]
serde = { version = "1.0.228", features = ["derive", "rc"] }
anyhow = "1.0.102"
tokio = { version = "1.52.3", features = ["full"] }
uuid = { version = "1.23.2", features = ["v7", "fast-rng"] }
serde_json = "1.0.150"
toml = "1.1.2"
chrono = "0.4.44"
directories = "6.0.0"
genai = "0.6"
reqwest = { version = "0.13", features = ["json"] }
urlencoding = "2"
thiserror = "2.0.18"
axum = "0.8"
futures-util = "0.3"
petname = { version = "3.0.0", default-features = false, features = [
  "default-rng",
  "default-words",
  "macros",
] }

[profile.release]
opt-level = 3
lto = "fat"       # 跨 crate 链接时全局优化，性能提升 10-30%
codegen-units = 1 # 禁止并行编译，允许更激进的内联优化
strip = true      # 去除符号表，减小体积
panic = "abort"   # 减小体积并略微提升性能
